--- a/stake.css
+++ b/stake.css
@@ -730,15 +730,16 @@ i {
     transform: rotate(180deg);
 }
 
-.user-profile {
-    margin: 0 15px;
-}
-
 .ft-search img {
     margin-right: 10px;
 }
 
-/* .user-profile-dropdown {
+.user-profile-icon {
+    margin: 0 15px;
+}
+
+.user-profile-dropdown {
+    display: none;
     padding: 5px 0;
     background-color: white;
     color: #1B2C39;
@@ -748,7 +749,19 @@ i {
     right: -2%;
     z-index: 100;
     overflow: hidden;
-} */
+}
+
+.dropdown-option {
+    width: 100%;
+    height: 35px;
+    padding: 0 13px;
+    line-height: 14px;
+    font-weight: 600;
+}
+
+.user-profile-active .user-profile-dropdown {
+    display: block;
+}
 
 .chat-dropdown {
     display: none;
@@ -761,14 +774,6 @@ i {
     right: -3%;
     z-index: 100;
     overflow: hidden;
-}
-
-.dropdown-option {
-    width: 100%;
-    height: 35px;
-    padding: 0 13px;
-    line-height: 14px;
-    font-weight: 600;
 }
 
 .dropdown-option:hover {
