--- a/stake.css
+++ b/stake.css
@@ -1,16 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;600;700;800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: 'Poppins', Courier, monospace;
+    font-family: 'Poppins', sans-serif;
     list-style: none;
 }
 
 body {
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     position: relative;
@@ -90,6 +92,7 @@ i {
 /*DETAILED SIDE MENU*/
 
 .stake-side-bar {
+    height: 100%;
     width: 240px;
     min-width: 240px;
     max-width: 350px;
@@ -113,7 +116,7 @@ i {
 .fixed-left {
     background-color: #0F202F;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -556,7 +559,7 @@ i {
 .odds-page {
     flex-grow: 1;
     background-color: #1B2D38;
-    height: 100vh;
+    height: 100%;
     min-width: calc(100% - 590px);
     font-size: 13px;
     font-weight: 600;
@@ -821,6 +824,7 @@ i {
     width: 92%;
     max-width: 1200px;
     height: calc(100% - 60px);
+    overflow: hidden;
 }
 
 .bs-menu1 {
@@ -959,6 +963,10 @@ i {
     cursor: not-allowed;
 }
 
+.odds-display-type {
+    position: relative;
+}
+
 .odds-dropdown {
     display: none;
     height: 120px;
@@ -966,7 +974,7 @@ i {
     border-radius: 5px;
     background-color: white;
     position: absolute;
-    right: 5px;
+    right: 0;
     margin-top: 10px;
     z-index: 100;
     overflow: hidden;
@@ -995,6 +1003,22 @@ i {
 .od-option-active:hover, .od-option-active {
     background-color: white;
     color: #1574E1;
+}
+
+.scroll-menu {
+    position: relative;
+    overflow-x: scroll;
+}
+
+.scroll-menu::-webkit-scrollbar {
+    height: 6px;
+}
+.scroll-menu::-webkit-scrollbar-track {
+    background-color: #1B2D38;
+}
+.scroll-menu::-webkit-scrollbar-thumb {
+    border-radius: 25px;
+    background-color: #2E4552;
 }
 
 
@@ -1703,7 +1727,11 @@ tbody .mc-event span {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 40px 0;
+    margin-bottom: 40px;
+}
+
+.footer-menu {
+    margin-top: 40px;
 }
 
 .fm-header {
@@ -1806,7 +1834,7 @@ tbody .mc-event span {
 /*CASHIER (VIEW SELECTED ODDS & CHECKOUT)*/
 
 .cashier {
-    height: 100vh;
+    height: 100%;
     width: 350px;
     min-width: 350px;
     position: relative;
@@ -2047,14 +2075,14 @@ tbody .mc-event span {
 /*Selected Odds (Games Booked)*/
 
 .games-booked {
-    height: calc(100vh - 300px);
+    height: calc(100% - 300px);
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
 
 .games-booked-multi {
-    height: calc(100vh - 340px);
+    height: calc(100% - 340px);
 }
 
 .games-booked::-webkit-scrollbar {
