--- a/stake.css
+++ b/stake.css
@@ -11,8 +11,8 @@
 
 body {
     display: flex;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     position: relative;
@@ -92,7 +92,6 @@ i {
 /*DETAILED SIDE MENU*/
 
 .stake-side-bar {
-    height: 100%;
     width: 240px;
     min-width: 240px;
     max-width: 350px;
@@ -116,7 +115,7 @@ i {
 .fixed-left {
     background-color: #0F202F;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -559,7 +558,7 @@ i {
 .odds-page {
     flex-grow: 1;
     background-color: #1B2D38;
-    height: 100%;
+    height: 100vh;
     min-width: calc(100% - 590px);
     font-size: 13px;
     font-weight: 600;
@@ -1834,7 +1833,7 @@ tbody .mc-event span {
 /*CASHIER (VIEW SELECTED ODDS & CHECKOUT)*/
 
 .cashier {
-    height: 100%;
+    height: 100vh;
     width: 350px;
     min-width: 350px;
     position: relative;
@@ -2075,14 +2074,14 @@ tbody .mc-event span {
 /*Selected Odds (Games Booked)*/
 
 .games-booked {
-    height: calc(100% - 300px);
+    height: calc(100vh - 300px);
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
 
 .games-booked-multi {
-    height: calc(100% - 340px);
+    height: calc(100vh - 340px);
 }
 
 .games-booked::-webkit-scrollbar {
