--- a/stake.css
+++ b/stake.css
@@ -116,6 +116,7 @@ i {
     background-color: #0F202F;
     width: 100%;
     height: 100vh;
+    min-height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -405,6 +406,7 @@ i {
     width: 60px;
     min-width: 60px;
     height: 100vh;
+    min-height: 100%;
     font-size: 13px;
     font-weight: 600;
     color: #0F202F;
@@ -559,6 +561,7 @@ i {
     flex-grow: 1;
     background-color: #1B2D38;
     height: 100vh;
+    min-height: 100%;
     min-width: calc(100% - 590px);
     font-size: 13px;
     font-weight: 600;
@@ -1361,6 +1364,7 @@ tbody .mc-event span {
 .view-open-bets .popup-background {
     width: 100vw;
     height: 100vh;
+    min-height: 100%;
     background-color: #040c12;
     opacity: 0.4;
 }
@@ -1369,7 +1373,8 @@ tbody .mc-event span {
     position: absolute;
     top: 0;
     width: 100vw;
-    height: 100vh;  
+    height: 100vh; 
+    min-height: 100%; 
 }
 
 .open-bet-event {
@@ -1837,6 +1842,7 @@ tbody .mc-event span {
 
 .cashier {
     height: 100vh;
+    min-height: 100%;
     width: 350px;
     min-width: 350px;
     position: relative;
@@ -2078,6 +2084,7 @@ tbody .mc-event span {
 
 .games-booked {
     height: calc(100vh - 300px);
+    min-height: calc(100% - 300px);
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
@@ -2085,6 +2092,7 @@ tbody .mc-event span {
 
 .games-booked-multi {
     height: calc(100vh - 340px);
+    min-height: calc(100% - 340px);
 }
 
 .games-booked::-webkit-scrollbar {
