Fixed Mobile Height issues (Entry 3)

--- a/responsive.css
+++ b/responsive.css
@@ -80,7 +80,7 @@
 }
 
 .tablet-dark-bg .popup-background {
-    height: 100vh;
+    height: 100%;
     min-height: 100%;
     width: calc(100vw - 240px);
     background-color: #161d2c;
