--- a/stake.css
+++ b/stake.css
@@ -11,7 +11,6 @@
 
 body {
     display: flex;
-    height: 100vh;
     width: 100vw;
     margin: 0;
     padding: 0;
@@ -115,7 +114,7 @@ i {
 .fixed-left {
     background-color: #0F202F;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     min-height: 100%;
     position: relative;
     display: flex;
@@ -405,7 +404,7 @@ i {
     background-color: #0F202F;
     width: 60px;
     min-width: 60px;
-    height: 100vh;
+    height: 100%;
     min-height: 100%;
     font-size: 13px;
     font-weight: 600;
@@ -560,7 +559,7 @@ i {
 .odds-page {
     flex-grow: 1;
     background-color: #1B2D38;
-    height: 100vh;
+    height: 100%;
     min-height: 100%;
     min-width: calc(100% - 590px);
     font-size: 13px;
@@ -1363,7 +1362,7 @@ tbody .mc-event span {
 
 .view-open-bets .popup-background {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     min-height: 100%;
     background-color: #040c12;
     opacity: 0.4;
@@ -1373,7 +1372,7 @@ tbody .mc-event span {
     position: absolute;
     top: 0;
     width: 100vw;
-    height: 100vh; 
+    height: 100%; 
     min-height: 100%; 
 }
 
@@ -1780,7 +1779,7 @@ tbody .mc-event span {
     padding: 0 15px;
     font-size: 25px;
     font-weight: 400;
-    color: #b1bad3;
+    color: #557187;
 }
 
 .fs2-item img {
@@ -1841,7 +1840,7 @@ tbody .mc-event span {
 /*CASHIER (VIEW SELECTED ODDS & CHECKOUT)*/
 
 .cashier {
-    height: 100vh;
+    height: 100%;
     min-height: 100%;
     width: 350px;
     min-width: 350px;
@@ -1854,6 +1853,7 @@ tbody .mc-event span {
 }
 
 .minimize-cashier {
+    display: none;
     position: absolute;
     left: 100%;
 }
@@ -2083,7 +2083,7 @@ tbody .mc-event span {
 /*Selected Odds (Games Booked)*/
 
 .games-booked {
-    height: calc(100vh - 300px);
+    height: calc(100% - 300px);
     min-height: calc(100% - 300px);
     width: 100%;
     overflow-x: hidden;
@@ -2091,7 +2091,7 @@ tbody .mc-event span {
 }
 
 .games-booked-multi {
-    height: calc(100vh - 340px);
+    height: calc(100% - 340px);
     min-height: calc(100% - 340px);
 }
 
