--- a/responsive.css
+++ b/responsive.css
@@ -80,8 +80,7 @@
 }
 
 .tablet-dark-bg .popup-background {
-    height: 100%;
-    min-height: 100%;
+    height: 100vh;
     width: calc(100vw - 240px);
     background-color: #161d2c;
     opacity: 0.6;
