--- a/stake.css
+++ b/stake.css
@@ -108,6 +108,7 @@ i {
 }
 
 .minimize {
+    display: none;
     position: absolute;
     left: -100%;
 }
@@ -115,7 +116,7 @@ i {
 .fixed-left {
     background-color: #0F202F;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     position: relative;
     display: flex;
     flex-direction: column;
@@ -404,7 +405,7 @@ i {
     background-color: #0F202F;
     width: 60px;
     min-width: 60px;
-    height: 100vh;
+    /* height: 100vh; */
     font-size: 13px;
     font-weight: 600;
     color: #0F202F;
@@ -557,9 +558,9 @@ i {
 
 .odds-page {
     flex-grow: 1;
-    background-color: #1B2D38;
-    height: 100vh;
+    /* height: 100vh; */
     min-width: calc(100% - 590px);
+    background-color: #1B2D38;
     font-size: 13px;
     font-weight: 600;
 }
@@ -1360,7 +1361,7 @@ tbody .mc-event span {
 
 .view-open-bets .popup-background {
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #161d2c;
     opacity: 0.6;
 }
@@ -1369,7 +1370,7 @@ tbody .mc-event span {
     position: absolute;
     top: 0;
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .open-bet-event {
@@ -1836,7 +1837,7 @@ tbody .mc-event span {
 /*CASHIER (VIEW SELECTED ODDS & CHECKOUT)*/
 
 .cashier {
-    height: 100vh;
+    /* height: 100vh; */
     width: 350px;
     min-width: 350px;
     position: relative;
@@ -2078,15 +2079,15 @@ tbody .mc-event span {
 /*Selected Odds (Games Booked)*/
 
 .games-booked {
-    height: calc(100vh - 300px);
+    /* height: calc(100vh - 300px); */
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
 
-.games-booked-multi {
+/* .games-booked-multi {
     height: calc(100vh - 340px);
-}
+} */
 
 .games-booked::-webkit-scrollbar {
     width: 6px;
