--- a/stake.css
+++ b/stake.css
@@ -11,7 +11,7 @@
 
 body {
     display: flex;
-    /* height: 100vh; */
+    height: 100%;
     width: 100vw;
     margin: 0;
     padding: 0;
@@ -116,7 +116,7 @@ i {
 .fixed-left {
     background-color: #0F202F;
     width: 100%;
-    /* height: 100vh; */
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -405,7 +405,7 @@ i {
     background-color: #0F202F;
     width: 60px;
     min-width: 60px;
-    /* height: 100vh; */
+    height: 100%;
     font-size: 13px;
     font-weight: 600;
     color: #0F202F;
@@ -558,7 +558,7 @@ i {
 
 .odds-page {
     flex-grow: 1;
-    /* height: 100vh; */
+    height: 100%;
     min-width: calc(100% - 590px);
     background-color: #1B2D38;
     font-size: 13px;
@@ -1361,7 +1361,7 @@ tbody .mc-event span {
 
 .view-open-bets .popup-background {
     width: 100vw;
-    /* height: 100vh; */
+    /* height: 100%; */
     background-color: #161d2c;
     opacity: 0.6;
 }
@@ -1837,7 +1837,7 @@ tbody .mc-event span {
 /*CASHIER (VIEW SELECTED ODDS & CHECKOUT)*/
 
 .cashier {
-    /* height: 100vh; */
+    height: 100%;
     width: 350px;
     min-width: 350px;
     position: relative;
@@ -2079,15 +2079,15 @@ tbody .mc-event span {
 /*Selected Odds (Games Booked)*/
 
 .games-booked {
-    /* height: calc(100vh - 300px); */
+    height: calc(100% - 300px);
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
 
-/* .games-booked-multi {
-    height: calc(100vh - 340px);
-} */
+.games-booked-multi {
+    height: calc(100% - 340px);
+}
 
 .games-booked::-webkit-scrollbar {
     width: 6px;
