--- a/responsive.css
+++ b/responsive.css
@@ -73,7 +73,6 @@
 }
 
 .tablet-dark-bg {
-    height: 100%;
     position: absolute;
     top: 0;
     left: 240px;
@@ -81,7 +80,7 @@
 }
 
 .tablet-dark-bg .popup-background {
-    height: 100%;
+    /* height: 100%; */
     width: calc(100vw - 240px);
     background-color: #161d2c;
     opacity: 0.6;
