--- a/stake.css
+++ b/stake.css
@@ -115,7 +115,7 @@ i {
 .fixed-left {
     background-color: #0F202F;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
     display: flex;
     flex-direction: column;
@@ -404,7 +404,7 @@ i {
     background-color: #0F202F;
     width: 60px;
     min-width: 60px;
-    height: 100%;
+    /* height: 100%; */
     font-size: 13px;
     font-weight: 600;
     color: #0F202F;
@@ -557,7 +557,7 @@ i {
 
 .odds-page {
     flex-grow: 1;
-    height: 100%;
+    /* height: 100%; */
     min-width: calc(100% - 590px);
     background-color: #1B2D38;
     font-size: 13px;
@@ -1347,8 +1347,6 @@ tbody .mc-event span {
 /* Random Bets Popup */
 
 .view-open-bets {
-    height: 100%;
-    width: 100vw;
     display: none;
     position: absolute;
     left: 0;
@@ -1361,8 +1359,7 @@ tbody .mc-event span {
 }
 
 .view-open-bets .popup-background {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
     background-color: #161d2c;
     opacity: 0.6;
 }
@@ -1370,8 +1367,7 @@ tbody .mc-event span {
 .obe-container { 
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
 }
 
 .open-bet-event {
@@ -1838,7 +1834,7 @@ tbody .mc-event span {
 /*CASHIER (VIEW SELECTED ODDS & CHECKOUT)*/
 
 .cashier {
-    height: 100%;
+    /* height: 100%; */
     width: 350px;
     min-width: 350px;
     position: relative;
@@ -2080,15 +2076,15 @@ tbody .mc-event span {
 /*Selected Odds (Games Booked)*/
 
 .games-booked {
-    height: calc(100% - 300px);
+    /* height: calc(100% - 300px); */
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
 
-.games-booked-multi {
+/* .games-booked-multi {
     height: calc(100% - 340px);
-}
+} */
 
 .games-booked::-webkit-scrollbar {
     width: 6px;
